# project-rust-api

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/config/: router.rs
src/handlers/: user_handler.rs
src/models/: mod.rs  user_item.rs
